taller buenas practicas poo

--- a/Taller_buenasPracticas/.project
+++ b/Taller_buenasPracticas/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Taller_practico_naves_AbstratctayInterfaces</name>
+	<name>Taller_buenasPracticas</name>
 	<comment></comment>
 	<projects>
 	</projects>
